external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_unique_use_fun_scopes_in_lambda_arg.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macro_unique_use_fun_scopes_in_lambda_arg.move:7:12
  │
7 │         $f($x.id())
  │            ^^ Macro parameters are not allowed to appear in paths
  │
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

